--- a/app/css/style.css
+++ b/app/css/style.css
@@ -186,16 +186,17 @@ a:focus {
             transform: translateX(0) translateX(0); } }
 
 .mob-menu {
-  position: fixed;
+  position: absolute;
   z-index: 2;
   left: 0;
   right: 0;
   top: 0;
+  color: #fff;
   background-color: #4156dc;
   padding-top: 20px;
-  -webkit-transform: translateY(-101%);
-      -ms-transform: translateY(-101%);
-          transform: translateY(-101%);
+  -webkit-transform: translateY(-200%);
+      -ms-transform: translateY(-200%);
+          transform: translateY(-200%);
   -webkit-transition: -webkit-transform .4s ease;
   transition: -webkit-transform .4s ease;
   -o-transition: transform .4s ease;
@@ -208,7 +209,7 @@ a:focus {
     margin-top: 20px;
     margin-right: 15px;
     position: absolute;
-    top: 0;
+    top: 5px;
     right: 0; }
   .mob-menu .menu-item a {
     display: block;
@@ -613,9 +614,6 @@ a:focus {
     margin-top: 5px;
     display: none;
     background: url("../images/arrow-big.png") no-repeat; }
-  .icon-item:hover {
-    -webkit-box-shadow: 0 2px 24px rgba(0, 0, 0, 0.1);
-            box-shadow: 0 2px 24px rgba(0, 0, 0, 0.1); }
   .icon-item:last-child {
     border-right: none; }
 
@@ -671,7 +669,7 @@ a:focus {
 .digits-content {
   text-align: center; }
 
-.digits-heading {
+.digits-heading, .services-heading {
   font-family: "Proxima Nova", sans-serif;
   font-size: 25px;
   line-height: 52px;
@@ -681,6 +679,9 @@ a:focus {
   -webkit-justify-content: space-around;
       -ms-flex-pack: distribute;
           justify-content: space-around; }
+  .digits-basic__wrap {
+    min-width: 175px;
+    max-width: 190px; }
 
 .digits-basic-head__nomber {
   text-shadow: 0 0 18px rgba(0, 0, 0, 0.29);
@@ -701,13 +702,38 @@ a:focus {
   letter-spacing: 0.78px;
   margin-top: 10px; }
 
+.services {
+  padding: 60px 0 80px;
+  border-bottom: 2px solid #eaeaea;
+  text-align: center; }
+
+.services-heading {
+  color: #3f3f3f;
+  margin-bottom: 40px; }
+
+.services-items {
+  overflow: visible; }
+  .services-items__wrap {
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap; }
+
+.services-box {
+  width: 20%; }
+
 @media (max-width: 1200px) {
   .home:before, .digits:before {
     left: -100px; }
   .header .menu-item__text {
     padding: 27px 15px; }
   .header__user-menu_btn {
-    margin-right: 10px; } }
+    margin-right: 10px; }
+  .digits-basic {
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap; }
+    .digits-basic__wrap {
+      width: 18%; } }
 
 @media (min-width: 993px) {
   .menu-item__submenu {
@@ -893,7 +919,28 @@ a:focus {
   .tabs-wrap-text {
     margin: 20px 0 20px;
     line-height: 22px;
-    text-align: left; } }
+    text-align: left; }
+  .digits-basic {
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .digits-basic__wrap {
+      width: 24%;
+      margin-left: 5px; }
+      .digits-basic__wrap:first-child {
+        margin-left: 0; }
+      .digits-basic__wrap:last-child {
+        margin-left: 0;
+        margin-top: 20px; } }
+
+@media (min-width: 769px) {
+  .icon-item:hover {
+    -webkit-box-shadow: 0 2px 24px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 24px rgba(0, 0, 0, 0.1); } }
 
 @media (max-width: 768px) {
   .info-wrap__heading {
@@ -952,7 +999,19 @@ a:focus {
     width: 100%;
     text-align: center; }
   .tabs-wrap-text {
-    text-align: center; } }
+    text-align: center;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%; }
+  .digits-heading, .services-heading {
+    font-size: 24px; }
+  .digits-basic__wrap {
+    width: 40%;
+    margin-left: 0;
+    margin-bottom: 35px; }
+    .digits-basic__wrap:last-child {
+      margin-top: 0;
+      margin-bottom: 0; } }
 
 @media (max-width: 480px) {
   .info {
@@ -1015,5 +1074,21 @@ a:focus {
         margin-left: 0;
         margin-top: 10px; }
   .tabs-icon {
-    width: 75%;
-    margin: 0 auto; } }
+    width: 82%;
+    margin: 0 auto; }
+  .digits {
+    padding: 45px 0; }
+  .digits-heading, .services-heading {
+    line-height: 35px; }
+  .digits-basic {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .digits-basic__wrap {
+      width: 49%; } }
