--- a/app/css/style.css
+++ b/app/css/style.css
@@ -711,12 +711,10 @@ a:focus {
   color: #3f3f3f;
   margin-bottom: 25px; }
 
-.services-items {
-  overflow: visible; }
-  .services-items__wrap {
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap; }
+.services-items__wrap {
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
 
 .services-box {
   width: 20%;
@@ -728,9 +726,9 @@ a:focus {
     border-bottom: 1px solid #eaeaea;
     min-height: 210px;
     padding: 35px 12px 0; }
-  .services-box:nth-child(n+6) .services-box__box {
+  .services-box:nth-child(2n+2) .services-box__box {
     border-bottom: none; }
-  .services-box:nth-child(5n+5) .services-box__box {
+  .services-box:nth-child(n+9) .services-box__box {
     border-right: none; }
 
 .service-box-img {
@@ -753,7 +751,12 @@ a:focus {
   color: #797979;
   font-size: 13px;
   line-height: 16px;
-  letter-spacing: .78px; }
+  letter-spacing: .78px;
+  font-family: "Roboto Light", sans-serif; }
+
+.price {
+  padding: 60px 0 70px;
+  text-align: center; }
 
 @media (max-width: 1200px) {
   .home:before, .digits:before {
@@ -767,7 +770,13 @@ a:focus {
         -ms-flex-wrap: wrap;
             flex-wrap: wrap; }
     .digits-basic__wrap {
-      width: 18%; } }
+      width: 18%; }
+  .services-box__box {
+    min-height: 225px; }
+  .service-box-heading {
+    line-height: 22px;
+    margin-top: 5px;
+    margin-bottom: 5px; } }
 
 @media (min-width: 993px) {
   .menu-item__submenu {
@@ -969,7 +978,11 @@ a:focus {
         margin-left: 0; }
       .digits-basic__wrap:last-child {
         margin-left: 0;
-        margin-top: 20px; } }
+        margin-top: 20px; }
+  .services-box:nth-child(n+9) .services-box__box {
+    border-left: 1px solid #eaeaea; }
+  .services-box:nth-child(n+7) .services-box__box {
+    border-right: none; } }
 
 @media (min-width: 769px) {
   .icon-item:hover {
@@ -1038,14 +1051,22 @@ a:focus {
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%; }
   .digits-heading, .services-heading {
-    font-size: 24px; }
+    font-size: 24px;
+    line-height: 40px; }
   .digits-basic__wrap {
     width: 40%;
     margin-left: 0;
     margin-bottom: 35px; }
     .digits-basic__wrap:last-child {
       margin-top: 0;
-      margin-bottom: 0; } }
+      margin-bottom: 0; }
+  .services-box:nth-child(n+7) .services-box__box {
+    border-left: 1px solid #eaeaea; }
+  .services-box:nth-child(n+5) .services-box__box {
+    border-right: none; }
+  .service-box-heading {
+    font-size: 15px;
+    line-height: 18px; } }
 
 @media (max-width: 480px) {
   .info {
@@ -1125,4 +1146,25 @@ a:focus {
         -ms-flex-align: center;
             align-items: center; }
     .digits-basic__wrap {
-      width: 49%; } }
+      width: 49%; }
+  .services {
+    padding: 40px 0 40px; }
+  .services-box:nth-child(n+5) .services-box__box {
+    border-left: 1px solid #eaeaea; }
+  .services-box:nth-child(n+3) .services-box__box {
+    border-right: none; }
+  .services-box:nth-child(5) .services-box__box {
+    border-left: none;
+    border-right: 1px solid #eaeaea; }
+  .services-box:nth-child(6) .services-box__box {
+    border-left: none;
+    border-right: 1px solid #eaeaea; }
+  .services-box:nth-child(7) .services-box__box {
+    border-left: none; }
+  .services-box:nth-child(8) .services-box__box {
+    border-left: none; }
+  .services-heading {
+    margin-bottom: 10px; }
+  .service-box-heading {
+    font-size: 15px;
+    line-height: 18px; } }
